# kafka-playground

./: .gitignore  README.md  docker-compose.yml
python-aiokafka/: pyproject.toml
python-aiokafka/python_aiokafka/: main.py
python_aiokafka/: Dockerfile  Makefile  README.md  pyproject.toml
python_aiokafka/python_aiokafka/: main.py
python_aiokafka/python_aiokafka/models/: ticket_opened.py
python_aiokafka/scripts/: generate_models.py
rust_rdkafka/: Cargo.toml  Dockerfile  README.md  entrypoint
rust_rdkafka/src/: lib.rs  main.rs
rust_rdkafka/target-docker/: .rustc_info.json
rust_rdkafka/target-docker/debug/: rust_rdkafka.d
rust_rdkafka/target-docker/debug/.fingerprint/aho-corasick-5e2146ded979ec97/: lib-aho_corasick  lib-aho_corasick.json
rust_rdkafka/target-docker/debug/.fingerprint/bitflags-01ae09a34244d1aa/: lib-bitflags  lib-bitflags.json
rust_rdkafka/target-docker/debug/.fingerprint/cc-3f17b4a0a7937b8b/: lib-cc  lib-cc.json
rust_rdkafka/target-docker/debug/.fingerprint/chrono-ff3dc6c88c75e46d/: lib-chrono  lib-chrono.json
rust_rdkafka/target-docker/debug/.fingerprint/clap-3e62b69bf8085675/: lib-clap  lib-clap.json
rust_rdkafka/target-docker/debug/.fingerprint/clap_builder-d016973214a16546/: lib-clap_builder  lib-clap_builder.json
rust_rdkafka/target-docker/debug/.fingerprint/clap_derive-51c98638fc94b1d2/: lib-clap_derive  lib-clap_derive.json
rust_rdkafka/target-docker/debug/.fingerprint/clap_lex-9425915b7e29681c/: lib-clap_lex  lib-clap_lex.json
rust_rdkafka/target-docker/debug/.fingerprint/env_logger-5045a7cafcc34580/: lib-env_logger  lib-env_logger.json
rust_rdkafka/target-docker/debug/.fingerprint/equivalent-856644f5b4c63eec/: lib-equivalent  lib-equivalent.json
rust_rdkafka/target-docker/debug/.fingerprint/futures-channel-43a9610cd98f87da/: lib-futures-channel  lib-futures-channel.json
rust_rdkafka/target-docker/debug/.fingerprint/futures-core-68d33626d8e5c5c2/: build-script-build-script-build  build-script-build-script-build.json
rust_rdkafka/target-docker/debug/.fingerprint/futures-core-7f53be2a45dc46ef/: lib-futures-core  lib-futures-core.json
rust_rdkafka/target-docker/debug/.fingerprint/futures-core-9b03682b9336504e/: run-build-script-build-script-build  run-build-script-build-script-build.json
rust_rdkafka/target-docker/debug/.fingerprint/indexmap-d522946208aba524/: lib-indexmap  (+1 more)
(+298 files in other folders)
