[tool.poetry]
name = "python-aiokafka"
version = "0.1.0"
description = ""
authors = ["Matteo Busi <mbusi81@gmail.com>"]
readme = "README.md"
packages = [{include = "python_aiokafka"}]

[tool.poetry.dependencies]
python = "^3.10"
aiokafka = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
