[tool.poetry]
name = "python-aiokafka"
version = "0.1.0"
description = ""
authors = ["Matteo Busi <mbusi81@gmail.com>"]
readme = "README.md"
packages = [{include = "python_aiokafka"}]

[tool.poetry.dependencies]
python = "^3.10"
aiokafka = "^0.8.1"
primapy-tracing = {git = "git@github.com:primait/primapy-tracing.git", rev = "1.2.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
dataclasses-avroschema = "^0.54.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python_aiokafka = "python_aiokafka.main:run"
generate_models = "scripts.generate_models:main"

[tool.isort]
profile = "black"