[package]
name = "rust_rdkafka"
version = "0.1.0"
edition = "2021"
default-run = "rust_rdkafka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
rdkafka = "0.34.0"
log = "0.4.19"
uuid = { version = "1.4.1", features = ["v4"] }
text_io = "0.1.12"
chrono = "0.4.26"
env_logger = "0.10.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tracing = "0.1.40"
prima-tracing = { version = "0.7.2", features = ["traces"] }
opentelemetry = "0.20.0"
